@@ -18,7 +18,7 @@
 #########################################################################
 
 
-MODULES='CGI DBI POSIX File::Temp Date::Parse UUID::Tiny XML::Simple Quota Archive::Zip IO::Compress::Gzip IO::Compress::Deflate Digest::MD5 Module::Load JSON File::Copy::Link DateTime DateTime::Format::Human::Duration'
+MODULES='CGI DBI POSIX File::Temp Date::Parse UUID::Tiny XML::Simple Quota Archive::Zip IO::Compress::Gzip IO::Compress::Deflate Digest::MD5 Module::Load JSON File::Copy::Link DateTime DateTime::Format::Human::Duration URI::Escape'
 
 OPTIONALMODULES='DBD::SQLite DBD::mysql DBD::Pg'
 FSBACKENDMODULES='File::Spec::Link'
